Fix scroll on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,12 @@ font-family: 'IBM Plex Sans', sans-serif;
 }
 
 /* Resets */
+
 body {
   font-family: "IBM Plex Mono", monospace;
   font-size: 14px;
-  overflow-x: hidden;
 }
+
 img {
   max-width: 100%;
 }
@@ -173,20 +174,22 @@ button {
 
 .list-menu {
   position: absolute;
-  left: 0;
+  right: 0;
   top: 44px;
   background-color: #0000ec;
   color: white;
   text-transform: uppercase;
   font-size: 16px;
   padding: 18px 0;
-  width: 100%;
+  width: 0;
   transform: translateX(100%);
   transition: all 0.3s ease-in-out;
+  overflow-x: hidden;
 }
 
 #toggle-menu:checked ~ .list-menu {
   transform: translateX(0);
+  width: 100%;
 }
 
 .list-menu .container li {
